--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,15 +8,28 @@
     tools:context=".services.activities.MainActivity">
 
     <Button
-        android:id="@+id/buttonSet10secAlarmInActivity"
+        android:id="@+id/buttonSet10secAlarm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:onClick="setAlarmButtonClicked"
-        android:text="@string/button_title_set_alarm"
+        android:text="@string/button_title_set_10_sec_alarm"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/buttonSet1MinAlarm"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:onClick="setAlarmButtonClicked"
+        android:text="@string/button_title_set_60_sec_alarm"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonSet10secAlarm" />
 </android.support.constraint.ConstraintLayout>
