--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,15 +11,17 @@
         android:id="@+id/buttonSetAlarm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="24dp"
+        android:onClick="setAlarmButtonClicked"
         android:text="@string/title_button_set_alarm"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
 
     <android.support.design.widget.TextInputLayout
+        android:id="@+id/textInputLayout"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
@@ -34,7 +36,8 @@
             android:id="@+id/delayInput"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/base_delay"
-            android:inputType="number"/>
+            android:inputType="number"
+            android:maxLength="9"
+            android:text="@string/base_delay" />
     </android.support.design.widget.TextInputLayout>
 </android.support.constraint.ConstraintLayout>
